--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="reset">
-            <button onclick="reset()">RESET</button>
+            <button onclick="reset()">RESTART AGAIN</button>
         </div>
     </div>
 
@@ -64,7 +64,7 @@
         <img src="resources/land.png" alt="land">
     </footer>
     <section class="final" id="win">
-        <img src="resources/won.png" alt="won">
+        
         <h1>YOU WON!!</h1>
     </section>
     <script src="index.js"></script>
